--- a/wp-content/themes/gymfitnesswptheme/style.css
+++ b/wp-content/themes/gymfitnesswptheme/style.css
@@ -10,3 +10,96 @@ License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Tags: CSS Grid, Flexbox ready, mobile first, gym theme
 Text Domain: gymfitness
 */
+
+/* Custom Properties */
+:root {
+  /* Fonts */
+  --mainFont: 'Staatliches', sans-serif;
+  --textFont: 'Montserrat', sans-serif;
+  --secondaryFont: 'Raleway', sans-serif;
+
+  /* Colors */
+  --primary: #ff5b00;
+  --darkGray: #2f2e2e;
+  --lightGray: #ebebeb;
+
+  --white: #ffffff;
+  --black: #000000;
+}
+
+html {
+  box-sizing: border-box;
+  /* Reset Rems */
+  font-size: 62.5%; /* Now 10px = 1rem! */
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: var(--textFont);
+  font-size: 16px; /* px fallback */
+  font-size: 1.6rem; /* default font-size for document */
+  line-height: 2;
+}
+
+/* for everything else, rem = px/10 */
+footer {
+  font-size: 13px;
+  font-size: 1.3rem;
+}
+
+/* you can safely nest rems, it's still 1rem = 10px */
+footer small {
+  font-size: 10px;
+  font-size: 1rem;
+}
+
+/* Headings */
+h1,
+h2,
+h3 {
+  font-family: var(--mainFont);
+  margin: 0.5rem 0;
+  line-height: 1.2;
+}
+
+h1 {
+  font-size: 6rem;
+}
+
+h2 {
+  font-size: 4.8rem;
+  color: var(--primary);
+}
+
+h3 {
+  font-size: 3.6rem;
+}
+
+/* Globals */
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  max-width: 120rem; /* 1200px */
+  width: 95%;
+  margin: 0 auto;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* Utilities */
