--- a/wp-content/themes/gymfitnesswptheme/style.css
+++ b/wp-content/themes/gymfitnesswptheme/style.css
@@ -155,3 +155,51 @@ img {
 .main-menu .current_page_item {
   border-bottom: 3px solid var(--primary);
 }
+
+/* Footer */
+.site-footer {
+  border-top: 2px solid var(--lightGray);
+  padding: 2rem 0;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-menu .menu {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .footer-menu .menu {
+    display: flex;
+  }
+
+  .footer-menu .menu li {
+    margin-right: 2rem;
+  }
+
+  .footer-menu .menu li:last-of-type {
+    margin-right: 0;
+  }
+
+  .footer-menu a {
+    font-family: var(--mainFont);
+    font-size: 2rem;
+    color: var(--black);
+  }
+
+  .copyright {
+    flex: 0 0 auto;
+  }
+}
+
+.copyright {
+  text-align: center;
+  flex: 1;
+  font-family: var(--mainFont);
+  font-size: 2rem;
+  color: var(--black);
+}
