--- a/wp-content/themes/gymfitnesswptheme/style.css
+++ b/wp-content/themes/gymfitnesswptheme/style.css
@@ -105,21 +105,25 @@ img {
 /* Utilities */
 
 /* Header */
-.logo {
-  display: flex;
-  justify-content: center;
-}
 
 .site-header {
   background-color: var(--darkGray);
   padding: 2rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-@media (min-width: 768px) {
-  .navigation-bar {
-    display: flex;
-    justify-content: space-between;
-  }
+.logo {
+  display: flex;
+  justify-content: center;
+  max-width: 50%;
+}
+
+.navigation-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* Main menu */
@@ -154,6 +158,42 @@ img {
 
 .main-menu .current_page_item {
   border-bottom: 3px solid var(--primary);
+}
+/* Mobile Menu */
+.mobile-menu {
+  position: absolute;
+}
+
+.slicknav-wrapper {
+  position: fixed;
+  right: 1rem;
+  top: 10rem;
+}
+
+@media (min-width: 768px) {
+  .slicknav_menu {
+    display: none;
+  }
+}
+.slicknav_menu {
+  background-color: var(--darkGray);
+}
+
+.slicknav_btn {
+  background-color: var(--primary);
+}
+.slicknav_nav {
+  width: 100vw;
+}
+.slicknav_nav a {
+  font-size: 2.4rem;
+  text-align: center;
+  font-family: var(--mainFont);
+}
+
+.slicknav_nav a:hover {
+  background-color: transparent;
+  color: var(--primary);
 }
 
 /* Footer */
