improve page template

--- a/wp-content/themes/gymfitnesswptheme/style.css
+++ b/wp-content/themes/gymfitnesswptheme/style.css
@@ -103,6 +103,17 @@ img {
 }
 
 /* Utilities */
+.text-center {
+  text-align: center;
+}
+
+.text-primary {
+  color: var(--primary);
+}
+
+.section {
+  padding: 5rem 0;
+}
 
 /* Header */
 .site-header {
@@ -241,4 +252,18 @@ img {
   font-family: var(--mainFont);
   font-size: 2rem;
   color: var(--black);
+}
+
+/* Page Template */
+.featured-image {
+  margin-bottom: 3rem;
+}
+
+.page h1 {
+  margin-bottom: 4rem;
+}
+
+.page.no-sidebars {
+  max-width: 80rem;
+  margin: 0 auto;
 }
