Add page with Sidebar & fix mobile menu

--- a/wp-content/themes/gymfitnesswptheme/style.css
+++ b/wp-content/themes/gymfitnesswptheme/style.css
@@ -175,9 +175,13 @@ img {
 }
 
 .slicknav-wrapper {
-  position: fixed;
+  /* position: fixed;
   right: 1rem;
-  top: 10rem;
+  top: 10rem; */
+
+  position: absolute;
+  right: -48rem;
+  top: -4rem;
 }
 
 @media (min-width: 768px) {
@@ -222,6 +226,14 @@ img {
   display: none;
 }
 
+.copyright {
+  text-align: center;
+  flex: 1;
+  font-family: var(--mainFont);
+  font-size: 2rem;
+  color: var(--black);
+}
+
 @media (min-width: 768px) {
   .footer-menu .menu {
     display: flex;
@@ -243,15 +255,8 @@ img {
 
   .copyright {
     flex: 0 0 auto;
+    text-align: right;
   }
-}
-
-.copyright {
-  text-align: center;
-  flex: 1;
-  font-family: var(--mainFont);
-  font-size: 2rem;
-  color: var(--black);
 }
 
 /* Page Template */
@@ -263,7 +268,22 @@ img {
   margin-bottom: 4rem;
 }
 
-.page.no-sidebars {
+.page.no-sidebar {
   max-width: 80rem;
   margin: 0 auto;
+}
+
+/* Page with Sidebar */
+@media (min-width: 768px) {
+  .page.with-sidebar {
+    display: flex;
+    justify-content: space-between;
+  }
+  .with-sidebar .page-content {
+    flex: 0 0 calc(65% - 2rem);
+  }
+
+  .with-sidebar .sidebar {
+    flex: 0 0 calc(35% - 2rem);
+  }
 }
