--- a/wp-content/themes/gymfitnesswptheme/style.css
+++ b/wp-content/themes/gymfitnesswptheme/style.css
@@ -170,17 +170,13 @@ img {
   border-bottom: 3px solid var(--primary);
 }
 /* Mobile Menu */
-.mobile-menu {
+.mobile-menu,
+.slicknav-wrapper {
   position: absolute;
 }
 
 .slicknav-wrapper {
-  /* position: fixed;
-  right: 1rem;
-  top: 10rem; */
-
-  position: absolute;
-  right: -48rem;
+  right: -95vw;
   top: -4rem;
 }
 
@@ -285,5 +281,73 @@ img {
 
   .with-sidebar .sidebar {
     flex: 0 0 calc(35% - 2rem);
+  }
+}
+
+/* Classes List */
+.classes-list {
+  margin-top: 4rem;
+}
+
+.card {
+  margin-bottom: 4rem;
+}
+.card img {
+  display: block;
+}
+
+.card .card-content {
+  padding: 3rem 0;
+  text-align: center;
+}
+
+.card .card-content a {
+  color: var(--black);
+}
+
+@media (min-width: 768px) {
+  .classes-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .card {
+    flex: 0 0 calc(50% - 2rem);
+    position: relative;
+  }
+  .card .card-content {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    padding: 2rem;
+    text-align: left;
+  }
+  .gradient::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#000000+0,000000+100&0+10,0.5+80 */
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0) 10%,
+      rgba(0, 0, 0, 0.5) 80%,
+      rgba(0, 0, 0, 0.5) 100%
+    ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  }
+  .card .card-content a {
+    color: var(--white);
+  }
+
+  .card .card-content p {
+    color: var(--primary);
+    font-size: 2rem;
+    font-weight: 700;
+    margin: 0;
   }
 }
