Finish single classes template

--- a/wp-content/themes/gymfitnesswptheme/style.css
+++ b/wp-content/themes/gymfitnesswptheme/style.css
@@ -351,3 +351,11 @@ img {
     margin: 0;
   }
 }
+
+/* Single Class */
+p.content-class {
+  font-weight: 700;
+  font-family: var(--secondaryFont);
+  font-size: 2.2rem;
+  text-align: center;
+}
