--- a/wp-content/themes/gymfitnesswptheme/style.css
+++ b/wp-content/themes/gymfitnesswptheme/style.css
@@ -399,3 +399,41 @@ p.content-class {
 .sidebar .classes-header {
   margin-bottom: 2rem;
 }
+
+/* Gallery */
+
+.gallery-images {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(6, auto);
+  gap: 2rem;
+}
+.gallery-images img {
+  display: block;
+}
+
+.gallery-images li:nth-child(4) {
+  grid-row: 2/4;
+  grid-column: 2/3;
+}
+
+.gallery-images li:nth-child(7) {
+  grid-column: 1/2;
+  grid-row: 5/7;
+}
+
+@media screen and (min-width: 768px) {
+  .gallery-images {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .gallery-images li:nth-child(4) {
+    grid-column: 4/5;
+    grid-row: 1/3;
+  }
+
+  .gallery-images li:nth-child(7) {
+    grid-column: 2/3;
+    grid-row: 2/4;
+  }
+}
