Styling Contact us form

--- a/wp-content/themes/gymfitnesswptheme/style.css
+++ b/wp-content/themes/gymfitnesswptheme/style.css
@@ -488,3 +488,44 @@ p.content-class {
     grid-row: 2/4;
   }
 }
+
+/* Contact Form */
+.wpcf7-form p {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.wpcf7-form p label,
+.wpcf7-form p span {
+  flex: 0 0 100%;
+}
+
+.wpcf7-form p span {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.wpcf7-form-control {
+  flex: 0 0 100%;
+  border: 1px solid var(--lightGray);
+  padding: 1rem;
+}
+
+.wpcf7-submit {
+  background-color: var(--primary);
+  font-size: 2rem;
+  font-family: var(--mainFont);
+  color: var(--white);
+  padding: 1.2rem;
+}
+
+.wpcf7-submit:hover {
+  cursor: pointer;
+}
+
+div.wpcf7 .ajax-loader {
+  background-repeat: no-repeat;
+  background-position: center center;
+  height: 4rem;
+  width: 4rem;
+}
