--- a/wp-content/themes/gymfitnesswptheme/style.css
+++ b/wp-content/themes/gymfitnesswptheme/style.css
@@ -151,11 +151,19 @@ body.home .site-header {
   padding-top: 2rem;
 }
 
+body.home .logo img {
+  width: 8em;
+}
+
 @media screen and (min-width: 768px) {
+  body.home .logo img {
+    width: 14em;
+  }
   body.home .header-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
+    height: 100%;
   }
   body.home .navigation-bar {
     grid-column: 1/5;
@@ -170,7 +178,7 @@ body.home .site-header {
 @media screen and (min-width: 768px) {
   .tagline {
     grid-column: 2/4;
-    grid-row: 2/3;
+    grid-row: 3/4;
     margin-top: 0;
   }
 }
