--- a/wp-content/themes/gymfitnesswptheme/style.css
+++ b/wp-content/themes/gymfitnesswptheme/style.css
@@ -569,3 +569,58 @@ div.wpcf7 .ajax-loader {
   height: 4rem;
   width: 4rem;
 }
+
+/* Homepage */
+/* Areas */
+.areas-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.areas-container .area {
+  flex: 0 0 50%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.areas-container .area::after {
+  content: '';
+  background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75));
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+
+.areas-container .area p {
+  position: absolute;
+  margin: 0 auto;
+  color: var(--white);
+  z-index: 1;
+  font-size: 2rem;
+  font-weight: 800;
+}
+
+.area img {
+  height: 350px;
+  object-fit: cover;
+}
+
+@media screen and (min-width: 768px) {
+  .areas-container .area {
+    flex: 0 0 25%;
+  }
+
+  .areas-container .area p {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  .areas-container .area:hover p {
+    opacity: 1;
+  }
+}
