Add short_bio for the instructors & improve styling

--- a/wp-content/themes/gymfitnesswptheme/style.css
+++ b/wp-content/themes/gymfitnesswptheme/style.css
@@ -655,3 +655,73 @@ div.wpcf7 .ajax-loader {
 .classes-homepage {
   background-color: var(--lightGray);
 }
+
+/* Instructors */
+.instructor-list li {
+  margin: 2rem 0;
+  border-bottom: 1px solid var(--lightGray);
+}
+
+.instructor .content {
+  padding: 3rem;
+}
+
+.instructor img {
+  display: block;
+  height: 350px;
+  object-fit: cover;
+}
+
+.instructor h3 {
+  color: var(--primary);
+}
+
+.instructor .tag {
+  background-color: var(--primary);
+  font-weight: 500;
+  font-family: var(--mainFont);
+  font-size: 2rem;
+  color: var(--white);
+  padding: 0.5rem 2rem;
+  border-radius: 5px;
+  margin-right: 1rem;
+}
+
+.instructor .tag:last-child {
+  margin-right: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .instructor-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .instructor {
+    flex: 0 0 calc(50% - 2rem);
+    position: relative;
+    margin-bottom: 4rem;
+  }
+
+  .instructor .content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+    color: var(--white);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+  }
+
+  .instructor:hover .content {
+    opacity: 1;
+  }
+}
